namespace Assets.Scripts.Common {

    public static class AnimationValStore {

        public const string SPEED_ATTACK = "SpeedAttack";

        public const string IS_DEATH = "IsDeath";

        public const string IS_ATTACK = "IsAttack";

        public const string IS_SHOW = "IsShow";

        public const string IS_USING_SPELL = "IsUsingSpell";

        public const string IS_WALK = "IsWalk";

    }

}
